--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@grpc/grpc-js": "^1.5.1",
-    "@grpc/proto-loader": "^0.6.9",
+    "body-parser": "^1.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "moment": "^2.29.1",
+    "nes.css": "^2.3.0",
     "redis": "^4.0.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "css-loader": "^6.5.1",
+    "postcss-load-config": "^3.1.1"
   }
 }
