--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "less-loader": "^4.1.0",
     "socket.io-client": "^4.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
